--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^0.8.5",
     "generate-json-webpack-plugin": "^0.2.1",
     "glob": "^7.1.1",
+    "glsl-blend": "^1.0.3",
     "glsl-hash-blur": "^1.0.3",
     "glsl-noise": "0.0.0",
     "glsl-pi": "^1.0.0",
