--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "generate-json-webpack-plugin": "^0.2.1",
     "glob": "^7.1.1",
     "glsl-blend": "^1.0.3",
+    "glsl-fxaa": "^3.0.0",
     "glsl-hash-blur": "^1.0.3",
     "glsl-noise": "0.0.0",
     "glsl-pi": "^1.0.0",
