--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "stats.js": "^0.16.0",
     "store": "^1.3.20",
     "stylus-media-queries": "^1.0.0",
+    "svg-stylus": "0.0.5",
     "three": "^0.82.1",
     "tween.js": "^16.3.5",
     "vinyl-ftp": "^0.4.5",
